--- a/lesson9.html
+++ b/lesson9.html
@@ -21,6 +21,9 @@
             margin: 0;
             font-size: 2.5em;
         }
+        h2, h3 {
+            margin-top: 20px;
+        }
         p {
             font-size: 1.2em;
             margin: 20px 0;
@@ -30,14 +33,26 @@
             padding: 20px;
             background: rgba(0, 0, 0, 0.7);
             border-radius: 10px;
-            max-width: 800px;
+            max-width: 900px;
+            text-align: left;
+        }
+        pre {
+            background: black;
+            color: lightgreen;
+            padding: 10px;
+            border-radius: 5px;
+            overflow-x: auto;
+        }
+        ul {
+            line-height: 1.8;
         }
         .exercise {
             margin: 20px 0;
+            text-align: center;
         }
         #successMessage {
             display: none;
-            color: pink;
+            color: lightgreen;
             font-size: 1.5em;
             margin: 20px 0;
         }
@@ -60,29 +75,106 @@
         <h1>Leçon 9 : Gestion des erreurs</h1>
     </header>
     <div class="content">
-        <p>La gestion des erreurs vous permet de gérer les exceptions qui se produisent pendant l'exécution de votre programme. Exemple :</p>
-        <pre style="background: black; color: lightgreen; padding: 10px; text-align: left;">
+        <h2>1. Introduction à la gestion des erreurs</h2>
+        <p>Dans un programme, il peut arriver que certaines erreurs se produisent pendant l'exécution. Ces erreurs sont appelées "exceptions". Il est important de gérer ces exceptions pour éviter que le programme ne plante et pour fournir des messages d'erreur compréhensibles.</p>
+        <p>La gestion des erreurs en Python se fait principalement à l'aide des blocs <code>try</code>, <code>except</code>, <code>else</code> et <code>finally</code>.</p>
+
+        <h2>2. Le bloc <code>try-except</code></h2>
+        <p>Le bloc <code>try</code> est utilisé pour placer le code susceptible de provoquer une erreur. Si une exception se produit, elle est capturée par le bloc <code>except</code>.</p>
+        <pre>
 # Exemple de gestion des erreurs
 try:
-    x = 1 / 0
+    x = 1 / 0  # Tentative de division par zéro
+except ZeroDivisionError:  # Exception capturée pour la division par zéro
+    print("Erreur : division par zéro.")
+        </pre>
+        <p>Dans cet exemple, nous tentons de diviser 1 par 0, ce qui génère une exception de type <code>ZeroDivisionError</code>. Cette exception est capturée par le bloc <code>except</code>, qui affiche un message d'erreur.</p>
+
+        <h3>2.1. Le bloc <code>else</code></h3>
+        <p>Le bloc <code>else</code> est exécuté si aucune exception n'a été levée dans le bloc <code>try</code>.</p>
+        <pre>
+try:
+    x = 10 / 2
 except ZeroDivisionError:
     print("Erreur : division par zéro.")
 else:
-    print("Aucune erreur.")
+    print("Aucune erreur. Le résultat est:", x)
         </pre>
-        <div class="exercise">
-            <p><strong>Exercice :</strong></p>
-            <p>Essayez de diviser un nombre par zéro et utilisez un `try-except` pour afficher un message d'erreur. Saisissez votre code ci-dessous :</p>
-            <textarea id="userCode" rows="4" cols="50" placeholder="try:
-    x = 1 / 0
-except ZeroDivisionError:
-    print('Erreur : division par zéro')">
-            </textarea>
-            <br>
-            <button onclick="checkExercise()">Vérifier</button>
-            <p id="successMessage">Félicitations ! Vous pouvez passer à la leçon suivante.</p>
-            <a id="nextLesson" href="lesson10.html">Leçon suivante</a>
-        </div>
+        <p>Dans cet exemple, aucune exception n'est levée, donc le bloc <code>else</code> s'exécute et affiche le résultat de la division.</p>
+
+        <h3>2.2. Le bloc <code>finally</code></h3>
+        <p>Le bloc <code>finally</code> est toujours exécuté, que l'exception soit levée ou non. Il est souvent utilisé pour fermer des fichiers ou des connexions réseau.</p>
+        <pre>
+try:
+    f = open("file.txt", "r")
+except FileNotFoundError:
+    print("Fichier non trouvé.")
+finally:
+    print("Exécution du bloc finally.")
+        </pre>
+        <p>Dans cet exemple, le bloc <code>finally</code> sera toujours exécuté, que le fichier soit trouvé ou non.</p>
+
+        <h2>3. Types d'exceptions courantes</h2>
+        <p>Python dispose de nombreuses exceptions prédéfinies. Voici quelques-unes des exceptions les plus courantes :</p>
+        <ul>
+            <li><strong>ZeroDivisionError</strong> : levée lorsqu'une tentative de division par zéro est effectuée.</li>
+            <li><strong>FileNotFoundError</strong> : levée lorsqu'un fichier est introuvable.</li>
+            <li><strong>IndexError</strong> : levée lorsqu'un index est en dehors des limites d'une liste.</li>
+            <li><strong>ValueError</strong> : levée lorsqu'une fonction reçoit un argument de type incorrect.</li>
+            <li><strong>TypeError</strong> : levée lorsqu'une opération ou une fonction est appliquée à un objet de type incorrect.</li>
+        </ul>
+
+        <h2>4. Lever des exceptions personnalisées</h2>
+        <p>Vous pouvez également créer vos propres exceptions en Python en utilisant le mot-clé <code>raise</code>.</p>
+        <pre>
+class MonException(Exception):
+    pass
+
+try:
+    raise MonException("Ceci est une exception personnalisée.")
+except MonException as e:
+    print("Exception capturée:", e)
+        </pre>
+        <p>Dans cet exemple, nous avons défini une exception personnalisée <code>MonException</code> et l'avons levée dans le bloc <code>try</code>.</p>
+
+        <h2>5. Gestion des erreurs dans des fonctions</h2>
+        <p>Vous pouvez gérer des erreurs au sein de vos fonctions. Voici un exemple où nous tentons d'ouvrir un fichier et gérons l'exception si le fichier est introuvable :</p>
+        <pre>
+def ouvrir_fichier(nom_fichier):
+    try:
+        with open(nom_fichier, "r") as fichier:
+            contenu = fichier.read()
+            return contenu
+    except FileNotFoundError:
+        return "Fichier introuvable."
+    except Exception as e:
+        return f"Une erreur est survenue: {e}"
+
+print(ouvrir_fichier("existant.txt"))  # Fichier trouvé
+print(ouvrir_fichier("inexistant.txt"))  # Fichier non trouvé
+        </pre>
+
+        <h2>6. Exercice interactif</h2>
+        <p>Essayez de diviser un nombre par zéro et utilisez un bloc <code>try-except</code> pour afficher un message d'erreur. Saisissez votre code ci-dessous :</p>
+        <textarea id="userCode" rows="6" cols="60" placeholder="try:\n    x = 1 / 0\nexcept ZeroDivisionError:\n    print('Erreur : division par zéro')"></textarea>
+        <br>
+        <button onclick="checkExercise()">Vérifier</button>
+        <p id="successMessage">Félicitations ! Vous pouvez passer à la leçon suivante.</p>
+        <a id="nextLesson" href="lesson10.html">Leçon suivante</a>
+
+        <h2>7. Exercices supplémentaires</h2>
+        <ul>
+            <li><strong>Exercice 1 :</strong> Créez un programme qui prend un nombre de l'utilisateur et essaie de le diviser par un autre nombre. Gérez l'exception si une division par zéro est effectuée.</li>
+            <li><strong>Exercice 2 :</strong> Créez une fonction qui ouvre un fichier et lit son contenu. Si le fichier n'existe pas, affichez un message d'erreur personnalisé.</li>
+            <li><strong>Exercice 3 :</strong> Créez un programme qui demande un nombre à l'utilisateur et affiche la racine carrée de ce nombre. Gérez les erreurs si l'utilisateur entre un nombre négatif ou non valide.</li>
+        </ul>
+
+        <h2>8. Défis supplémentaires</h2>
+        <ul>
+            <li><strong>Défi 1 :</strong> Créez une fonction qui prend une liste de nombres et retourne leur moyenne. Gérez les erreurs si la liste est vide ou contient des valeurs non numériques.</li>
+            <li><strong>Défi 2 :</strong> Créez un programme qui calcule la facture d'un achat en ligne. Si un produit n'est pas disponible, le programme doit lever une exception et afficher un message personnalisé.</li>
+            <li><strong>Défi 3 :</strong> Créez une fonction qui prend un fichier CSV, lit les données et retourne les informations sous forme de dictionnaire. Gérez les erreurs si le fichier est mal formaté ou introuvable.</li>
+        </ul>
     </div>
     <script>
         function checkExercise() {
